잘못된 import 교체

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ server.error.include-message=always
 server.error.include-stacktrace=always
 server.error.include-binding-errors=always
 
-server.error.path=/error
+# 기본설정은 /error
+# server.error.path=/error-page
